--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,6 +24,16 @@
     height: calc(.5rem + 2 * 38px);
 }
 
+#chat {
+    position: absolute;
+    z-index: 10;
+    top: 50px;
+    bottom: calc(.5rem + 2 * 38px + 2rem);
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+}
+
 /* Spinner */
 
 .sk-cube-grid {
