--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,7 @@
     left: 0;
     right: 0;
     overflow: hidden;
+    background-color: var(--bs-body-bg);
 }
 #prompt-input {
     resize: none;
